_sass/main.scss
*,::after,::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  color: black;
  text-decoration: none;
}

html {
  font-size: 100%;
}

.current {
  color: var(--latvian-flag-color);
}

body {
  padding-left: var(--body-padding);
  padding-right: var(--body-padding);
  font-family: var(--font-stack);
  font-size: calc(var(--font-size) * 2);
}

article {
  font-size: 75%;
  margin-bottom: var(--bottom-padding);
}

article a {
  font-weight: bold;
}

article blockquote {
  margin-bottom: var(--blockquote-padding);
  margin-left: calc(var(--blockquote-border-offset) * -1 - var(--border-width));
  padding-left: var(--blockquote-border-offset);
  border-left-style: solid;
  border-width: var(--border-width);
}

nav {
  font-weight: 700;
  font-size: 200%;
}

footer {
  padding-bottom: var(--bottom-padding);
}

a:hover {
  text-decoration: underline;
}

footer a  {
  font-weight: lighter;
  font-size: 50%;
}

dt {
  font-size: 70%;
  font-style: italic;
}

dd {
  padding-left: 1em;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

p {
  text-align: justify;
}

figure.highlight {
  font-size: 50%;
  margin-top: calc(var(--code-block-margin) * .25);
  margin-bottom: var(--code-block-margin);
}

code.language-plaintext {
  background-color: #f8f8f8;
  color: #dd1144;
  border-radius: 1vh;
  font-weight: lighter;
  border: 0.05vh solid #bfbfbf;
  padding-left: .2em;
  padding-right: .2em;
}

header {
  padding-top: calc(var(--header-padding) * .6);
  padding-bottom: calc(var(--header-padding) * .6);
  padding-right: calc(var(--body-padding) * 1);
  padding-left: calc(var(--body-padding) * 1);
  margin-right: calc(var(--body-padding) * -1);
  margin-left: calc(var(--body-padding) * -1);
}

header h1 {
  background-color: var(--latvian-flag-color);
  color: var(--background-color);
  padding-top: calc(var(--header-padding) * .4);
  padding-bottom: calc(var(--header-padding) * .4);
  padding-right: inherit;
  padding-left: inherit;
  margin-right: inherit;
  margin-left: inherit;
}

nav a:hover {
  color: var(--latvian-flag-color)
}

nav {
  background-color: var(--background-color);
  padding-top: var(--nav-padding);
  padding-bottom: var(--nav-padding);
  padding-right: calc(var(--body-padding) * 1);
  padding-left: calc(var(--body-padding) * 1);
  margin-right: calc(var(--body-padding) * -1);
  margin-left: calc(var(--body-padding) * -1);
}

